# zfs

./: AUTHORS  META  Makefile.am  configure.ac
.github/workflows/: zfs-tests-functional.yml  zfs-tests-sanity.yml  zloop.yml
cmd/: Makefile.am
cmd/zdb/: zdb.c  zdb_il.c
cmd/zed/: Makefile.am  zed_disk_event.c
cmd/zfs/: zfs_iter.c  zfs_main.c
cmd/zhack/: zhack.c
cmd/zpool/: Makefile.am  zpool_iter.c  zpool_main.c  zpool_util.h  zpool_vdev.c
cmd/zpool_influxdb/: zpool_influxdb.c
cmd/ztest/: ztest.c
cmd/zvol_wait/: zvol_wait
config/: Rules.am  kernel-get-user-pages.m4  kernel-vfs-iov_iter.m4  kernel.m4  toolchain-simd.m4  user-initramfs.m4  user-libfetch.m4  user.m4  zfs-build.m4  zfs-meta.m4
contrib/: Makefile.am
contrib/pam_zfs_key/: pam_zfs_key.c
etc/: Makefile.am
etc/init.d/: Makefile.am  zfs-load-key.in
etc/zfs/: zfs-functions.in
include/: libzfs.h  libzfs_core.h  libzfs_impl.h  libzutil.h  zfeature_common.h  zfs_prop.h
include/sys/: Makefile.am  abd.h  abd_impl.h  arc.h  arc_impl.h  blake3.h  dbuf.h  ddt.h  dmu.h  dmu_impl.h  dmu_objset.h  dmu_recv.h  dsl_dataset.h  spa.h  (+20 more)
man/: Makefile.am
module/: Makefile.bsd  Makefile.in
scripts/: cmd-macos.sh  debug-macos.sh  pkg_macos.sh  zfs-tests.sh
tests/zfs-tests/tests/functional/direct/: Makefile.am  cleanup.ksh  dio.kshlib  dio_aligned_block.ksh  dio_async_always.ksh  dio_compression.ksh  dio_dedup.ksh  dio_encryption.ksh  dio_grow_block.ksh  dio_mixed.ksh  dio_mmap.ksh  dio_property.ksh  dio_random.ksh  dio_recordsize.ksh  dio_unaligned_block.ksh  setup.ksh
tmp/: do-benchmark.sh
(+234 files in other folders)
