pkgdatadir = $(datadir)/@PACKAGE@/zfs-tests/tests/functional/direct
dist_pkgdata_SCRIPTS = \
	setup.ksh \
	cleanup.ksh \
	dio_aligned_block.ksh \
	dio_async_always.ksh \
	dio_compression.ksh \
	dio_dedup.ksh \
	dio_encryption.ksh \
	dio_grow_block.ksh \
	dio_mixed.ksh \
	dio_mmap.ksh \
	dio_property.ksh \
	dio_random.ksh \
	dio_recordsize.ksh \
	dio_unaligned_block.ksh

dist_pkgdata_DATA = \
	dio.cfg \
	dio.kshlib
